# RC-Flight-Sim

./: .gitignore  .gitmodules  README.md  build-prompt.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: agentic_mode.md  agentic_plugin_api.md  aircraft_creation.md  build_instructions.md  contributing.md  refinement_guide.md  replay_system.md  scenery_creation.md  telemetry_protocol.md  visual_optimization.md
godot_project/: README.md  project.godot
godot_project/addons/jsbsim_gdextension/: CMakeLists.txt  jsbsim_extension.gdextension
godot_project/addons/jsbsim_gdextension/src/: jsbsim_extension.cpp  jsbsim_extension.h
godot_project/addons/terrain_3d/: README.md
godot_project/assets/aircraft/aerobat/: aerobat.json
godot_project/assets/aircraft/jet/: jet.json
godot_project/assets/aircraft/quad/: quad.json
godot_project/assets/aircraft/trainer/: trainer.json  trainer_fdm.xml  tuning.json
godot_project/assets/materials/: paper.tres  standard_flight_material.tres
godot_project/assets/sceneries/default_airfield/: scenario.json
godot_project/scenes/: main.tscn
godot_project/scripts/agentic/: agentic_aircraft_wizard.gd  agentic_copilot.gd  agentic_scenery_generator.gd  agentic_tts.gd  agentic_utils.gd  agentic_voice.gd
godot_project/scripts/agentic/skills/: agentic_skill.gd  formation_trainer_skill.gd  skill_template.gd  smoke_writer_skill.gd
godot_project/scripts/autoload/: agentic_manager.gd  flight_recorder.gd  input_manager.gd  scene_manager.gd  settings_manager.gd
godot_project/scripts/camera/: camera_manager.gd  chase_camera.gd  fpv_camera.gd  free_orbit_camera.gd  stationary_camera.gd  tower_camera.gd
godot_project/scripts/controller/: calibration_wizard.gd
godot_project/scripts/debug/: sim_console.gd
godot_project/scripts/flight_sim/: aircraft_node.gd  atmosphere.gd  fdm_interface.gd
godot_project/scripts/flight_sim/components/: aerodynamics.gd  aircraft_component.gd  damage.gd  propulsion.gd  sound.gd
godot_project/scripts/net/: buddy_box.gd  multiplayer_manager.gd  remote_aircraft.gd  telemetry_transmitter.gd
godot_project/scripts/ui/: agentic_hud.gd  agentic_toggle.gd  debrief_screen.gd  hud.gd  main_menu.gd  quick_tune.gd  settings_menu.gd
godot_project/scripts/util/: config_loader.gd  math_utils.gd  multirotor_utils.gd
godot_project/shaders/: aircraft_pbr.gdshader  grass_wind.gdshader  sky_clouds.gdshader
godot_project/tests/: run_tests.gd  test_agentic_integration.gd  test_agentic_phase5.gd  test_agentic_utils.gd  test_config_parser.gd  test_math_utils.gd  test_multirotor_utils.gd  test_sim_console.gd
tools/: telemetry_receiver.py
